# tree-sitter-applescript

./: .prettierignore  Cargo.toml  README.md  binding.gyp  grammar.js  package-lock.json  package.json
.github/workflows/: ci.yml
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
src/: grammar.json  node-types.json  parser.c
