[package]
name = "tree-sitter-applescript"
description = "AppleScript grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "applescript"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/mskelton/tree-sitter-applescript"
edition = "2018"
license = "ISC"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.3"

[build-dependencies]
cc = "1.0"
